fix the z-index style of product filters

--- a/src/pages/products/popupFilter/style.scss
+++ b/src/pages/products/popupFilter/style.scss
@@ -9,6 +9,7 @@
   position: absolute;
   overflow-y: scroll;
   left: 0;
+  z-index: 2;
 
   &__button {
     width: calc(100% - 2rem);
